2009-10-21  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Eric Seidel.

        Fixes part of <http://webkit.org/b/30522>.
        Web Inspector: DOM Exceptions throughout the Inspector should be more human readable.
        
        Adds a test to check the name and description of some DOM Exceptions.

        * fast/dom/dom-exception-description-expected.txt: Added.
        * fast/dom/dom-exception-description.html: Added.
        * fast/dom/script-tests/dom-exception-description.js: Added.

2009-10-21  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Removed 5333725.html from Skipped and modified the expected
        result of 5232159-expected.txt and fake-drag-expected.txt, this
        modifications come from the changes in EventSender (bug 30633 and
        bug 30636).
        https://bugs.webkit.org/show_bug.cgi?id=30593

        * LayoutTests/platform/gtk/Skipped:
        * LayoutTests/platform/gtk/editing/selection/5232159-expected.txt:
        * LayoutTests/platform/gtk/editing/selection/fake-drag-expected.tx :

2009-10-21  Victor Wang  <victorw@chromium.org>

        Reviewed by Eric Seidel.

        Fix click-focus-anchor layout test to mimic click event.

        https://bugs.webkit.org/show_bug.cgi?id=30610

        * fast/events/click-focus-anchor.html:

2009-10-21  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Darin Adler.

        Fix the crash when a node not in a document receives dispatchEvent.
        https://bugs.webkit.org/show_bug.cgi?id=30611

        * fast/events/dispatch-event-no-document-expected.txt: Added.
        * fast/events/dispatch-event-no-document.html: Added.

2009-10-21  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        Added a background-clip parsing test that would have caught some
        regressions that were introduced in r46240.

        * fast/css/background-clip-text-expected.txt: Added.