@@ -1,7 +1,7 @@
 <html>
 <body>
 
-    <video src=content/test.mp4 controls></video>
+    <video controls></video>
     
     <p>Test that setting currentTime changes the time, and that 'ended' event is fired in a reasonable amount of time</p>
     
