@@ -1,3 +1,14 @@
+2009-10-21  Andrew Scherkus  <scherkus@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        Update more media layout tests to use findMediaFile().
+
+        https://bugs.webkit.org/show_bug.cgi?id=30644
+
+        * media/controls-drag-timebar.html: Switch to using findMediaFile().
+        * media/video-currentTime-set.html: Remove src attribute and rely on findMediaFile() instead.
+
 2009-10-21  Brian Weinstein  <bweinstein@apple.com>
 
         Reviewed by Eric Seidel.
